Changelog of flooding
===================================================


1.28 (unreleased)
-----------------

- Nothing changed yet.


1.27 (2012-10-19)
-----------------

Increase flooding-base to 1.32:
Add Javascript that can open a specific project/scenario upon loading
the homepage.

Get the information about which scenario to open from the session (it
is set in a view in flooding-lib).

Increase flooding-lib to 2.23:
Adapt comment line removing functions so that they can also be called
on individual files, and don't depend on the size of /tmp on the
webserver anymore.

Change the zipfile creation functions so that they don't try to do
everything in memory.

Add a link (/flooding/preload/<project_id>/</scenario_id>/) that puts
relevant information in the session and then redirects to the front
page. Code in flooding-base 1.32 then causes the right scenario to
open.


1.26 (2012-10-17)
-----------------

Increase flooding-lib to 2.22:
Replaced the parameter 'scenario_id' with 'body' in perform_task function of
'tasks.perform_task' module.

Increase lizard-worker to 0.3:
Replaced the parameter 'scenario_id' with 'body' in callback function of
'action_task' module.


1.25 (2012-10-17)
-----------------

Increase flooding-lib to 2.21:
Adds a view that returns a zipfile containing all the result files of a
given scenario, possibly first unzipped. The view checks whether the
user has approval permissions in at least one of the projects the
scenario belongs to.

Adds the view to the breach info page as a 'download' link for each
scenario listed.

Adds a 'check_scenario_permission' method to the permission manager.



1.24 (2012-10-16)
-----------------

- Configured flooding_lib.perform_task module.

- Removed sentry handler.

- Pinned lizard-worker 0.2.

- Removed flooding-worker.

- Increase flooding-lib to 2.20
Added tasks and perform_task.py.
Changed references flooding_worker to lizard_worker.


1.23 (2012-10-15)
-----------------
