@@ -3,4 +3,6 @@ web_host=p-web-ws-00-d6.external-nens.local
 
 [staging]
 web_host=s-web-ws-00-d3.external-nens.local
+# Linux task machine (for task 200).
+task_host=s-flod-task-d1.external-nens.local
 checkout=trunk
