@@ -1,0 +1,19 @@
+[buildout]
+extends = development.cfg
+parts +=
+    supervisor
+    supervisor-cronjob
+
+[supervisor-cronjob]
+recipe = z3c.recipe.usercrontab
+times = @reboot
+command = ${buildout:bin-directory}/supervisord
+
+[supervisor]
+# Overwrite original in server.cfg.
+recipe = collective.recipe.supervisor
+port = ${serverconfig:supervisor-port}
+user = sdfsdfsdf
+password = aosdifsdf
+programs =
+      100 task_200 ${buildout:directory}/bin/django [lw_task_worker --task_code 200 --log_level DEBUG --worker_nr 1]
