@@ -5,7 +5,9 @@ Changelog of flooding
 1.28 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Added experimental fabfile functions for task 200 server.
+
+- Added buildout config file for task 200 server.
 
 
 1.27 (2012-10-19)
